[package]
name = "ietf-mirror"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
depot = { path = "../depot" }
rusqlite.workspace = true
thiserror.workspace = true
libc.workspace = true
zstd.workspace = true
reqwest = { workspace = true, features = ["rustls-tls-native-roots"], optional = true }

[features]
default = ["fetch"]
fetch = ["dep:reqwest"]

[dev-dependencies]
httpmock = "0.7"
tempfile = "3"

[[bin]]
name = "ietfmak"
path = "src/bin/ietfmak.rs"
required-features = ["fetch"]
