[package]
name = "wikimak-wikipedia"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# The compression discipline IS the architecture (tiered-VBF doc §8):
# f0 standalone zstd; f1/cold refPrefix-anchored on the next-newer
# record. `experimental` exposes ZSTD_CCtx_refPrefix.
zstd = { workspace = true, features = ["experimental"] }
wikimak-depot.workspace = true
wikimak-mediawiki.workspace = true
strpool.workspace = true
thiserror.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
hex.workspace = true
# `sync` (discover → fetch → import) drives wikimak_mediawiki's HTTP
# surface, so the blocking client is a real dependency now, not just the
# livewiki test's.
reqwest = { workspace = true, features = ["rustls-tls-native-roots"] }

[dev-dependencies]
tempfile = "3"
# `tests/sync.rs` stands in for dumps.wikimedia.org.
httpmock = "0.7"

[lints.clippy]
# Tester's `tests/sha1.rs` doc-comment uses a multi-line, visually-aligned
# list item that clippy reads as overindented. Can't edit tests/.
doc_overindented_list_items = "allow"
# Tester's `tests/livewiki.rs` uses `while let Some(_) = stream.next()`
# against an `&mut PageStream<_>` — the for-loop rewrite clippy wants
# doesn't compile against the borrowed iterator. Can't edit tests/.
while_let_on_iterator = "allow"
# Tester's `tests/codec.rs` builds a needle with `std::iter::repeat(b)
# .take(n)`. Clippy 1.94+ wants `repeat_n` but it's MSRV-sensitive.
manual_repeat_n = "allow"

[[bin]]
name = "wikimak"
path = "src/bin/wikimak.rs"
