[package]
name = "wikimak-wikitext"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
# Only the `#[ignore]`d full-corpus parserTests conformance test fetches over
# the network (tests/parsertests.rs). Same blocking client as the livewiki
# tests; the floored core-subset test is fully offline.
reqwest = { workspace = true }
